unpackaged/main/default/objects/Silo_Members__c/Silo_Members__c.object-meta.xml
<CustomObject>
    <description>Silo Members and their role in the Silo.  This is used for dynamically populating ADC Projects</description>
    <label>Silo Member</label>
    <nameField>
        <displayFormat>Silo_Member-{0}</displayFormat>
        <label>Silo Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Silo Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>