unpackaged/main/default/objects/Silo_Members__c/fields/Notify_on_Company_Wide__c.field-meta.xml
<CustomField>
    <fullName>Notify_on_Company_Wide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify on Company Wide</label>
    <type>Checkbox</type>
</CustomField>