unpackaged/main/default/objects/Silo_Members__c/fields/PreObs__c.field-meta.xml
<CustomField>
    <fullName>PreObs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Role should be on Project Team for Pre-Obs projects</description>
    <label>PreObs</label>
    <type>Checkbox</type>
</CustomField>