unpackaged/main/default/objects/Silo_Members__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Silo Member should be on a Pricing Project</description>
    <label>Pricing</label>
    <type>Checkbox</type>
</CustomField>