unpackaged/main/default/objects/Silo_Members__c/fields/Product_Launch__c.field-meta.xml
<CustomField>
    <fullName>Product_Launch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Silo Member should be on the Project Team for Product Launch Projects</description>
    <label>Product Launch</label>
    <type>Checkbox</type>
</CustomField>