unpackaged/main/default/objects/Silo_Members__c/fields/Silo__c.field-meta.xml
<CustomField>
    <fullName>Silo__c</fullName>
    <label>Silo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Silo</valueSetName>
    </valueSet>
</CustomField>