unpackaged/main/default/objects/Silo_Members__c/fields/Teamer__c.field-meta.xml
<CustomField>
    <fullName>Teamer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Teamers and their roles in the current Silo</description>
    <label>Teamer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Silo_Members</relationshipName>
    <type>Lookup</type>
</CustomField>