unpackaged/main/default/objects/Silo_Members__c/fields/Value_Add_Services_Required__c.field-meta.xml
<CustomField>
    <fullName>Value_Add_Services_Required__c</fullName>
    <label>Value Add Services Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cut-to-Length Cable/Wire</fullName>
            </value>
            <value>
                <fullName>Cut-to-Length T-Slotted Rails</fullName>
            </value>
            <value>
                <fullName>VAS Repackaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>