unpackaged/main/default/objects/Silo_Members__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Silo__c</columns>
    <columns>Teamer__c</columns>
    <columns>Role__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Notify_on_Company_Wide__c</columns>
    <columns>Product_Launch__c</columns>
    <columns>PreObs__c</columns>
    <columns>Pricing__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All with data</label>
</ListView>